# mobi-metadata

./: CMakeLists.txt
src/: CMakeLists.txt  exth_header.h  main.cpp  mobi_header.h  palm_header.h  parse_int.h  record0.h
tests/: CMakeLists.txt  r0  r0.h  test.cpp
tools/: offsets.sh
